--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,14 @@
   }
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,10 +31,16 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  overflow: hidden;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.square-fit {
+  width: max(100%, 100vh);
+  height: max(100%, 100vw);
 }
