--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,10 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow: hidden;
+}
+
+.themed {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -31,7 +35,6 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  overflow: hidden;
 }
 
 .fullscreen {
